# vite-react-wasm-cpp-emscripten-cmake

./: .eslintrc.js  .gitignore  .gitmodules  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json
cpp/: CMakeLists.txt  hello.cpp
cpp/src/: main.cpp
public/: hello.js  hello.wasm  public.html  wasm_ar.js
src/: App.tsx  index.css  wasm.d.ts
src/app/: Hello.tsx  layout.tsx  page.tsx
